Einplfegen der bilder aus Aufgabe 12

--- a/tasks/u12/index.html
+++ b/tasks/u12/index.html
@@ -36,7 +36,10 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a2.png" alt="a2.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a2.png" alt="a2.png">
+            <figcaption>Abbildung 12.1: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
@@ -49,7 +52,10 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a3.png" alt="a3.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a3.png" alt="a3.png">
+            <figcaption>Abbildung 12.2: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
@@ -62,7 +68,10 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a4.png" alt="a4.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a4.png" alt="a4.png">
+            <figcaption>Abbildung 12.3: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
@@ -75,7 +84,10 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a5.png" alt="a5.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a5.png" alt="a5.png">
+            <figcaption>Abbildung 12.5: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
@@ -88,7 +100,10 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a9.png" alt="a9.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a9.png" alt="a9.png">
+            <figcaption>Abbildung 12.6: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
@@ -102,7 +117,10 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a10.png" alt="a10.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a10.png" alt="a10.png">
+            <figcaption>Abbildung 12.7: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
@@ -115,7 +133,10 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a11.png" alt="a11.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a11.png" alt="a11.png">
+            <figcaption>Abbildung 12.8: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
@@ -128,7 +149,10 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a12.png" alt="a12.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a12.png" alt="a12.png">
+            <figcaption>Abbildung 12.9: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
@@ -141,14 +165,156 @@
     </tab-element>
 
     <tab-element tab-title="Solution">
-        <img src="tasks/u12/sql_injection/a13.png" alt="a13.png">
+        <figure>
+            <img src="tasks/u12/sql_injection/a13.png" alt="a13.png">
+            <figcaption>Abbildung 12.10: TODO</figcaption>
+        </figure>
     </tab-element>
   </tab-view>
 
   
 
-  
-
   <h2>Aufgabe 12.3. WebGoat XSS</h2>
+
+  <tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Aufgabe 12.3.2</h3>
+        <p>
+            Test
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Solution">
+        <figure>
+            <img src="tasks/u12/xss/2.png" alt="a2.png">
+            <figcaption>Abbildung 12.11:</figcaption>
+        </figure>
+    </tab-element>
+  </tab-view>
+
+
+  <tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Aufgabe 12.3.7</h3>
+        <p>
+            Test
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Solution">
+        <figure>
+            <img src="tasks/u12/xss/7.png" alt="a7.png">
+            <figcaption>Abbildung 12.12:</figcaption>
+        </figure>
+    </tab-element>
+  </tab-view>
+
+  <tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Aufgabe 12.3.10</h3>
+        <p>
+            Test
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Solution">
+        <figure>
+            <img src="tasks/u12/xss/10.png" alt="a10.png">
+            <figcaption>Abbildung 12.13:</figcaption>
+        </figure>
+    </tab-element>
+  </tab-view>
+
+  <tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Aufgabe 12.3.11</h3>
+        <p>
+            Test
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Solution">
+        <figure>
+            <img src="tasks/u12/xss/11.png" alt="a11.png">
+            <figcaption>Abbildung 12.14:</figcaption>
+        </figure>
+    </tab-element>
+  </tab-view>
+
+  <tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Aufgabe 12.3.12</h3>
+        <p>
+            Test
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Solution">
+        <figure>
+            <img src="tasks/u12/xss/12.png" alt="a12.png">
+            <figcaption>Abbildung 12.15:</figcaption>
+        </figure>
+    </tab-element>
+  </tab-view>
+
+
   <h2>Aufgabe 12.4. WebGoat Cross-Site Request Forgeries</h2>
-  <h2>Aufgabe 12.5. Integration in die eingene Webseite</h2>
+  <tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Aufgabe 12.4.3</h3>
+        <p>
+            Test
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Code">
+        <file-viewer src="tasks/u12/xsrf/a3.html"></file-viewer>
+    </tab-element>
+
+    <tab-element tab-title="Solution">
+        <figure>
+            <img src="tasks/u12/xsrf/3.png" alt="a3.png">
+            <figcaption>Abbildung 12.16:</figcaption>
+        </figure>
+    </tab-element>
+  </tab-view>
+
+  <tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Aufgabe 12.4.4</h3>
+        <p>
+            Test
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Code">
+        <file-viewer src="tasks/u12/xsrf/a4.html"></file-viewer>
+    </tab-element>
+
+    <tab-element tab-title="Solution">
+        <figure>
+            <img src="tasks/u12/xsrf/4.png" alt="a4.png">
+            <figcaption>Abbildung 12.17:</figcaption>
+        </figure>
+    </tab-element>
+  </tab-view>
+
+  <tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Aufgabe 12.4.7</h3>
+        <p>
+            Test
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Code">
+        <file-viewer src="tasks/u12/xsrf/a7.html"></file-viewer>
+    </tab-element>
+
+    <tab-element tab-title="Solution">
+        <figure>
+            <img src="tasks/u12/xsrf/7.png" alt="a7.png">
+            <figcaption>Abbildung 12.16:</figcaption>
+        </figure>
+    </tab-element>
+  </tab-view>
