Aufgabe 12 Bechreibung eingefügt

--- a/tasks/u12/index.html
+++ b/tasks/u12/index.html
@@ -180,7 +180,7 @@
     <tab-element tab-title="&#9432;">
         <h3>Aufgabe 12.3.2</h3>
         <p>
-            Test
+            Da man durch <dfn>Cross-Site Scripting (XSS)</dfn> häufig Sitzung stielt, da Cookies im Browser abliegen, sollte man in der ersten Aufgabe einfach mal vergleichen, ob die Cookies in verschiedenen Tabs identisch sind. Dies war der Fall.
         </p>
     </tab-element>
 
@@ -197,7 +197,7 @@
     <tab-element tab-title="&#9432;">
         <h3>Aufgabe 12.3.7</h3>
         <p>
-            Test
+            In der zweiten Aufgabe sollte ein Formular daraufhin überprüft werden, ob es möglich ist, ein Script Tag einzuschleusen. Dies war in den oberen Feldern nicht ohne Weiteres möglich, da diese die Eingabe auf einen zulässigen Wert beschränken (Whitelisting). Im ersten Texteingabefeld war dies jedoch ohne Probleme möglich, da der Inhalt des Feldes in die Webseite aufgenommen wurde. Dadurch konnte ein eigenes Script ausgeführt werden.
         </p>
     </tab-element>
 
@@ -213,7 +213,7 @@
     <tab-element tab-title="&#9432;">
         <h3>Aufgabe 12.3.10</h3>
         <p>
-            Test
+            In dieser Aufgabe sollte eine Schwachstelle in der Seite gefunden werden. Es war bekannt, dass eine Testroute noch in der Webseite vorhanden sein musste. In der Datei <dfn>GoatRouter.js</dfn> konnte die entsprechende Route ausfindig gemacht werden (Siehe Abb. 12.13 Zeile 52). 
         </p>
     </tab-element>
 
@@ -229,7 +229,7 @@
     <tab-element tab-title="&#9432;">
         <h3>Aufgabe 12.3.11</h3>
         <p>
-            Test
+            In dieser Aufgabe sollte die Testroute aus der vorherigen Aufgabe genutzt werden, um eine interne Funktion aufzurufen, welche eine Nummer auf der Console ausgibt.
         </p>
     </tab-element>
 
@@ -242,14 +242,9 @@
   </tab-view>
 
   <tab-view>
-    <tab-element tab-title="&#9432;">
-        <h3>Aufgabe 12.3.12</h3>
-        <p>
-            Test
-        </p>
-    </tab-element>
-
     <tab-element tab-title="Solution">
+        <h3>Aufgabe 12.3.12</h3>
+
         <figure>
             <img src="tasks/u12/xss/12.png" alt="a12.png">
             <figcaption>Abbildung 12.15:</figcaption>
@@ -263,7 +258,7 @@
     <tab-element tab-title="&#9432;">
         <h3>Aufgabe 12.4.3</h3>
         <p>
-            Test
+            In der ersten Aufgabe zum Themenbereich <dfn>Cross-Site Reques Forgeries</dfn> sollte eine Post-Anfrage an einen Endpoint abgesetzt werden. Dan HTML/JS Code dazu können Sie dem Tab Code entnehmen.
         </p>
     </tab-element>
 
@@ -283,7 +278,7 @@
     <tab-element tab-title="&#9432;">
         <h3>Aufgabe 12.4.4</h3>
         <p>
-            Test
+            In dieser Aufgabe sollte eine Bewertung für ein Bild unter einem anderen Namen abgegeben werden. Dazu musste zuerst das Formular auf der eigentlichen Webseite analysiert werden, damit die entsprechenden Felder gesetzt werden konnten. Der Code aus dem Tab "Code" konnte dann eingesetzt werden, um eine Bewertung abzugeben.
         </p>
     </tab-element>
 
@@ -303,7 +298,7 @@
     <tab-element tab-title="&#9432;">
         <h3>Aufgabe 12.4.7</h3>
         <p>
-            Test
+            Danach sollte wieder eine Manipulation auf einen Endpoint vorgenommen werden. Da der Content-Type nicht serverseitig überprüft, wurde konnte das JSON an den Endpoint übertragen werden. 
         </p>
     </tab-element>
 
